
\item \code{\link{pglm}}, \code{\link{pmmglm}}: Change all \code{log} arguments to \code{log.p}. (19 Dec 2010)

\item Revise examples in \code{/tests} directory. (02 May 2011)

\item Implement very basic NAMESPACE and remove file \code{/R/zzz.R}. (5 Nov 2011)

\item List functions explicitly in NAMESPACE. (19 Dec 2011)

\item \code{\link{mmglm}} and \code{\link{neglogLik}}: Restrict the number of iterations in examples on manual pages to minimise time during package checks. (19 Dec 2011)

\item \code{modify.func}: New function to allow the user to modify package functions in the NAMESPACE set-up. This function violates the CRAN policy as users are not supposed to change the NAMESPACE on such packages. Some examples where it is required to modify package functions will not work, for example, the second example in \code{\link{Mstep}}. (7 Mar 2012)

\item \code{modify.func}: Function removed. See the second example in \code{\link{Mstep}} for a work-around when package functions need to be modified. (14 Apr 2012)

\item \code{\link{Mstep}}: Revised documentation about distribution requirements and ways to include other distributions into the software framework. (14 Apr 2012)
}}


\section{Future Development}{
\enumerate{
\item The functions \code{\link{Viterbi}} and \code{\link{residuals}} need methods for objects of class \code{\link{mmpp}}.

\item A number of the original functions have names that are too general. For example \code{\link{forwardback}} calculates the forward-backward probabilities, but only for the model \code{\link{dthmm}}. The corresponding function for the \code{\link{mmpp}} model is \code{\link{forwardback.mmpp}}. It would be more consistent to attach to these original functions a \code{dthmm} suffix.

\item The demonstration examples are all for \code{\link{dthmm}}. Also need some for \code{\link{mmglm1}}, \code{\link{mmglmlong1}} and \code{\link{mmpp}}.
}}

\keyword{documentation}

