@@ -1,7 +1,16 @@
-<html><head><title>R: HiddenMarkov Vignettes</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+<meta name="generator" content="HTML Tidy for Linux (vers 25 March 2009), see www.w3.org">
+<title>R: HiddenMarkov Vignettes</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"><!-- <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"> -->
 <link rel="stylesheet" type="text/css" href="../../R.css">
-</head><body>
+<style type="text/css">
+ span.c1 {font-family: monospace}
+</style>
+</head>
+
+<body>
 <h2>Vignettes of Package HiddenMarkov </h2>
 
 <dl>
@@ -25,7 +34,7 @@
 </dl>
 
 <dl>
-<dt><a href="http://goo.gl/J6s7M" target="new">notes.pdf</a>:
+<dt><a href="ftp://ftp.gns.cri.nz/pub/davidh/sslib/other/notes.pdf" target="new">notes.pdf</a>:
 <dd> Mathematical Background Notes
 </dl>
 
