@@ -106,6 +106,8 @@ This page contains a listing of recent changes made to the package.
 \item \code{modify.func}: Function removed. See the second example in \code{\link{Mstep}} for a work-around when package functions need to be modified. (14 Apr 2012)
 
 \item \code{\link{Mstep}}: Revised documentation about distribution requirements and ways to include other distributions into the software framework. (14 Apr 2012)
+
+\item The package \pkg{snow} has been superseded by \pkg{parallel}, changed where needed. In \code{\link{BaumWelch.mmglmlong1}} arguments \code{makeSOCKcluster} and \code{SNOWcluster} renamed to \code{makePSOCKcluster} and \code{PSOCKcluster}, respectively. Functions \code{dmmglm} and \code{pmmglm} added to exported namespace (required for parallel processing). (13 Aug 2014)
 }}
 
 
